--- a/src/window.ui
+++ b/src/window.ui
@@ -69,11 +69,12 @@
                 <property name="left_margin">2</property>
                 <property name="right_margin">2</property>
                 <property name="monospace">True</property>
-                <property name="show_line_numbers">True</property>
+                <property name="show_line_marks">True</property>
                 <property name="tab_width">4</property>
                 <property name="indent_width">4</property>
                 <property name="auto_indent">True</property>
                 <property name="insert_spaces_instead_of_tabs">True</property>
+                <property name="highlight_current_line">True</property>
               </object>
             </child>
           </object>
@@ -98,6 +99,7 @@
               <packing>
                 <property name="name">pdf</property>
                 <property name="title" translatable="yes">PDF</property>
+                <property name="icon_name">org.gnome.Evince-symbolic</property>
               </packing>
             </child>
             <child>
@@ -106,16 +108,18 @@
                 <property name="can_focus">True</property>
                 <property name="shadow_type">in</property>
                 <child>
-                  <object class="GtkTextView" id="log_view">
+                  <object class="GtkSourceView" id="log_view">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="monospace">True</property>
+                    <property name="left_margin">2</property>
+                    <property name="right_margin">2</property>
                   </object>
                 </child>
               </object>
               <packing>
                 <property name="name">log</property>
                 <property name="title" translatable="yes">LOG</property>
+                <property name="icon_name">org.gnome.Logs-symbolic</property>
                 <property name="position">1</property>
               </packing>
             </child>
@@ -162,8 +166,6 @@
           <object class="GtkStackSwitcher">
             <property name="visible">True</property>
             <property name="can_focus">False</property>
-            <property name="homogeneous">True</property>
-            <property name="icon_size">0</property>
             <property name="stack">view_stack</property>
           </object>
           <packing>
